--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^5.0.0-beta.5",
+    "eslint": "^8.16.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "open": "^7.3.1",
@@ -35,8 +40,10 @@
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.5",
     "cesium": "^1.92.0",
+    "copy-webpack-plugin": "^7.0.0",
     "cross-env": "^7.0.3",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.0.0-beta.5",
     "jsdoc": "^3.6.10",
     "mammoth": "^1.4.16",
     "minami": "^1.2.3",
