调整文档这 改写 Cesium.when

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -18,7 +18,8 @@
     "allowSyntheticDefaultImports": true
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "build/gisMap.d.ts"
   ],
   "exclude": [
     "node_modules"
