--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kdhy/gismap",
-  "version": "1.0.21",
+  "version": "1.0.22",
   "description": "",
   "main": "build/gisMap.js",
   "scripts": {
@@ -29,6 +29,7 @@
     "less-loader": "^10.2.0",
     "open": "^7.3.1",
     "style-loader": "^3.3.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.11.1",
     "webpack-cli": "3",
     "webpack-dev-server": "^3.11.1",
