--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "qiankun": "^2.5.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "satellite.js": "^4.1.3",
     "url-loader": "^4.1.1"
   }
 }
