--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@kdhy/gismap",
-  "version": "1.0.46",
+  "version": "1.0.48",
   "description": "",
   "main": "build/gisMap.js",
   "scripts": {
-    "build": "webpack --config config/webpack.prod.config.js",
+    "build": "webpack --config config/webpack.prod.config.js && node ./config/copy.js",
     "dev": "cross-env PORT=3000 node ./config/devServer.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "doc": "jsdoc -c ./conf.json"
